--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p>
+        Volume changes depending on distance 
+    </p>
     <audio loop id ="music" preload="auto" style="display:none">
-        <source src="sound1.mp3" type="audio/mpeg">
+        <source src="sound.mp3" type="audio/mpeg">
     </audio>
 
     <div id="overlay">
@@ -18,6 +21,13 @@
     <div id="container"></div>
     <div id="info">
         <p>push button here</p>
+        <p>Song: Warriyo - Mortals (feat. Laura Brehm) [NCS Release]
+            Music provided by NoCopyrightSounds<br>
+            <a href="http://ncs.io/mortals">Free Download/Stream:http://ncs.io/mortals </a>
+            <br>
+            <a href="http://youtu.be/yJg-Y5byMMw">Watch:http://youtu.be/yJg-Y5byMMw </a>
+        </p>
+        
     </div>
 
 
